# oxygen-plus-cursors

./: cursor-test.py
src/: CMakeLists.txt  config.cmake  cursors.cmake  make_config.cmake  setup.cmake  theme.cmake
src/config/: dnd-ask.in  dnd-copy.in  dnd-link.in  dnd-move.in  dnd-no-drop.in  half-busy.in  wait.in
src/theme-black/: index.theme
src/theme-blue/: index.theme
src/theme-bluecurve/: index.theme
src/theme-brown/: index.theme
src/theme-cherry/: index.theme
src/theme-chrome/: index.theme
src/theme-desert/: index.theme
src/theme-emerald/: index.theme
src/theme-green/: index.theme
src/theme-grey/: index.theme
src/theme-honeycomb/: index.theme
src/theme-hot_orange/: index.theme
src/theme-lilac/: index.theme
src/theme-midnight_meadow/: index.theme
src/theme-navy/: index.theme
src/theme-norway/: index.theme
src/theme-obsidian/: index.theme
src/theme-obsidian-hc/: index.theme
src/theme-olympus/: index.theme
src/theme-olympus-inv/: index.theme
src/theme-orchid/: index.theme
src/theme-oxygen/: index.theme
src/theme-peach/: index.theme
src/theme-purple/: index.theme
src/theme-red/: index.theme
src/theme-red-argentina/: index.theme
src/theme-sea_blue/: index.theme
src/theme-steel/: index.theme
src/theme-terra/: index.theme
src/theme-terra_green/: index.theme
src/theme-violet/: index.theme
src/theme-viorange/: index.theme
src/theme-white/: index.theme
src/theme-whitewater/: index.theme
src/theme-wonton/: index.theme
src/theme-yellow/: index.theme
src/theme-zion/: index.theme
